# rugby_league_icp

./: Cargo.toml  README.md  dfx.json  rugby_league_backend.did
src/rugby_league_backend/: Cargo.toml  lib.rs
src/rugby_league_backend/src/: lib.rs
